# esnpy

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml  release.yml  test-doc.yml
docs/: conf.py  esnpy.rst  getting-started.rst  index.rst
esnpy/: __init__.py  batch_trainer.py  core.py  esn.py  init.py  reader.py  reservoir.py  reservoir_utils.py  train.py  tune.py  tuner.py  type.py
examples/: mackey_glass.py  trajectories.py  trajectory_classification.py
examples/MackeyGlass/: mackey_glass.py
examples/TrajectoryClassification/: trajectory_classification.py
