[build-system]
requires = [
    "setuptools", "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "esnpy"
version = "0.4.0"
description = "Out-of-the-box framework for Echo State Networks"
readme = "README.md"
authors = [{name = "Théo BL", email = "biasutto.t@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"    
]
keywords = ["machine learning", "neural networks", "echo state network"]
dependencies = [
    "numpy >= 1.23.0",
    "scipy >= 1.9.3"
]
requires-python = ">= 3.9"

[project.optional-dependencies]
lint = ["black", "flake8"]
doc = ["sphinx", "sphinx-pyproject"]

[project.urls]
GitHub = "https://github.com/NiziL/esnpy"

[tool.sphinx-pyproject]
extensions = ["sphinx.ext.autodoc", "sphinx.ext.viewcode", "sphinx.ext.napoleon"]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_STORE"]
html_theme = "classic"
html_static_path = ["_static"]
